# Attendance-Management-System-Using-Face-Recognition

./: .actrc  .coverage  .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .lighthouserc.js  .markdownlinkcheck.json  .pre-commit-config.yaml  .yamllint  40B-V1-Referee_Report.txt  AGENTS.md  API.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CI_FIX_LOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_CARD.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DJANGO5_MIGRATION.md  DOCUMENTATION_REVAMP_STATUS.md  Dockerfile  Dockerfile.gpu  FEATURE_FLAGS.md  LICENSE  LOCAL_CI_COMMANDS.md  Makefile  README.md  README.md.backup  RIGOR_PASS_SUMMARY.md  SECURITY.md  SUPPORT.md  Suggestions.md  USER_GUIDE.md  WORKFLOW_TEST_RESULTS.md  check_jsdoc.sh  (+29 more)
.Jules/: palette.md
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md  ci-fix-notes.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml  feature_request.yml
.github/instructions/: django-migrations.instructions.md  django-templates.instructions.md  pytest-tests.instructions.md  recognition-pipeline.instructions.md
.github/workflows/: bump-version.yml  ci.yml  close-all-prs.yml  codeql.yml  copilot-setup-steps.yml  dependency-review.yml  dependency-submission.yml  docker-publish.yml  face-recognition-tests.yml  frontend-ci.yml  lighthouse.yml  pre-commit.yml
.jules/: aiml.md  aiml_log.md  bolt.md  buddha-scroll.md  docker-status.md  docker.md  docs-progress.md  hunter-progress.md  kubernetes.md  palette.md  picasso.md  sentinel.md  testing.md
attendance_system_facial_recognition/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
attendance_system_facial_recognition/settings/: __init__.py  base.py  production.py  sentry.py
configs/: policy.yaml
docs/: AGENTS.md  ARCHITECTURE.md  BUSINESS_ACTIONS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCS_INDEX.md  FAIRNESS_AND_LIMITATIONS.md  FEATURE_FLAGS.md  GOOD_FIRST_ISSUES.md  MULTI_FACE_GUIDE.md  QUICKSTART.md  README.md  SUPPORT.md  TODO.md  TRAINING_PROTOCOL.md  TROUBLESHOOTING.md  USER_GUIDE.md  UX_NOTES.md  change-log.md  deployment-guide.md  developer-guide.md  monitoring.md  performance-tuning.md  security.md  theme-customization.md  troubleshooting.md  ultimate-guide.md  user-guide.md
docs/_archive/: README.md
docs/screenshots/: README.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: llms.txt  robots.txt
frontend/src/: App.tsx  index.css  main.tsx
k8s/: README.md
k8s/base/: celery-beat-deployment.yaml  celery-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  postgres-statefulset.yaml  pvc.yaml  redis-statefulset.yaml  sealed-secret.yaml  secret.yaml  serviceaccount.yaml  web-deployment.yaml  web-service.yaml
recognition/: ablation.py  admin.py  admin_views.py  anti_spoof_cnn.py  apps.py  context_processors.py  data_splits.py  depth_estimator.py  domain_adaptation.py  embedding_cache.py  faiss_index.py  features.py  forms.py  frame_consistency.py  health.py  liveness.py  metrics_store.py  models.py  monitoring.py  multi_face.py  performance_utils.py  pipeline.py  sample_quality.py  scheduled_tasks.py  tasks.py  test_ablation.py  test_data_splits.py  test_failures.py  test_integration.py  test_metrics.py  test_metrics_store.py  tests.py  urls.py  utils.py  views.py  views_legacy.py  webcam_manager.py
recognition/analysis/: __init__.py  attendance.py  failures.py
recognition/api/: exceptions.py  serializers.py  urls.py  views.py
recognition/evaluation/: __init__.py  metrics.py
recognition/migrations/: 0001_initial.py  0002_add_threshold_profiles_and_liveness.py  0003_add_model_evaluation_result.py  0004_threshold_profile_group_support.py  0005_alter_livenessresult_challenge_type_and_more.py
recognition/static/: llms.txt  manifest.json  robots.txt
recognition/views/: __init__.py  config.py  utils.py
reports/: split_summary.json  splits.csv
sample_data/: README.md
sample_data/reports/: sample_splits.csv
scripts/: bootstrap_demo.py  capture_screenshots.py  generate_synthetic_data.py  reproduce_sample_results.py  verify_exceptions.py
src/: __init__.py
src/attendance_system_facial_recognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/common/: __init__.py  crypto.py  demo_data.py  encryption.py  face_data_encryption.py  seeding.py
src/evaluation/: __init__.py  face_recognition_eval.py  fairness.py
tests/: conftest.py  test_pwa_assets.py  test_smoke.py
tests/common/: test_crypto.py  test_demo_data.py  test_seeding.py
tests/evaluation/: test_face_recognition_eval.py  test_fairness.py
tests/recognition/: __init__.py  test_api_attendance_n_plus_one.py  test_api_exceptions.py  test_api_security_sentinel.py  test_api_views.py  test_attendance_analysis.py  test_attendance_dashboard.py  test_attendance_flows.py  test_attendance_session.py  test_csv_injection.py  test_dataset_cache.py  test_dos_prevention.py  test_edge_cases.py  test_embedding_cache.py  test_embedding_cache_perf.py  test_embedding_cache_unit.py  test_encryption_workflow.py  test_enhanced_liveness.py  test_enhanced_liveness_v2.py  test_export_reports_command.py  test_face_recognition_api.py  test_face_recognition_workflow.py  test_fairness_dashboard.py  test_faiss_cache.py  test_faiss_index.py  test_feature_flags.py  test_health.py  test_liveness.py  test_liveness_limit.py  test_models.py  test_monitoring.py  test_motion_liveness.py  test_multi_face.py  test_perf_attendance_feed.py  test_performance.py  test_pipeline.py  test_plot_security.py  test_rate_limiting.py  test_real_data_integration.py  test_rotate_encryption_keys.py  (+8 more)
tests/settings/: test_dev_encryption_keys.py  test_production.py
tests/ui/: README.md  conftest.py  test_admin_navigation.py  test_attendance_session_dirty_check.py  test_dashboard_greeting.py  test_mark_attendance_focus.py  test_security_xss.py  (+3 more)
users/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
verification/: verify_accessibility.py
(+142 files in other folders)
