[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-system-facial-recognition"
version = "1.7.0"
description = "Smart Attendance System using Face Recognition with DeepFace"
requires-python = ">=3.12"
authors = [
    {name = "Attendance System Team"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "Django==6.0",
    "django-crispy-forms==2.1",
    "dj-database-url==2.3.0",
    "crispy-bootstrap5==2025.6",
    "django-ratelimit==4.1.0",
    "cryptography==46.0.5",
    "django-silk==5.4.3",
    "django-pandas==0.6.7",
    "deepface==0.0.93",
    "imutils==0.5.4",
    "matplotlib==3.10.7",
    "celery==5.6.1",
    "redis==7.1.0",
    "sentry-sdk[django]==2.43.0",
    "seaborn==0.13.2",
    "Pillow==12.0.0",
    "opencv-python==4.9.0.80",
    "scikit-learn==1.7.2",
    "tf-keras==2.20.1",
    "numpy==2.2.5",
    "pandas==2.3.3",
    "scipy==1.14.1",
    "prometheus-client==0.23.1",
    "PyYAML==6.0.2",
    "psycopg2-binary==2.9.11",
    "faiss-cpu==1.13.1",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "django-cors-headers==4.3.1",
]

[project.optional-dependencies]
dev = [
    "black==25.12.0",
    "isort==7.0.0",
    "flake8==7.1.1",
    "pytest==8.3.4",
    "pytest-django==4.9.0",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "psycopg2-binary==2.9.11",
    "pre-commit==4.0.1",
    "pytest-playwright==0.4.4",
    "playwright==1.57.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | __pycache__
  | build
  | dist
  | node_modules
  | frontend
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*", "*/__pycache__/*"]
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    ".venv",
    "build",
    "dist",
]
ignore = ["E203", "W503", "E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "attendance_system_facial_recognition.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"]
# Note: Main pytest configuration is in pytest.ini
# This section is kept minimal for tool compatibility
addopts = "-v --strict-markers --tb=short"
